trying to add eventlistener to js

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
     <main>
 
-        <section class="1st-question">
+        <section class="question1">
         <h1>1st question</h1>
         <ul style="list-style-type:none;>
             <li class="correct-answer">Coffee</li>
@@ -27,7 +27,7 @@
           </ul>
         </section>
 
-        <section class="2nd-question">
+        <section class="quesiton2">
         <h2>2nd question</h2>
         <ul style="list-style-type:none;>
             <li class="correct-answer">Coffee</li>
@@ -39,7 +39,7 @@
         <section class="3rd-question">
         <h3>3rd question</h3>
         <ul style="list-style-type:none;>
-            <li class="correct-answer">Coffee</li>
+            <li class= "correct-answer">Coffee</li>
             <li>Tea</li>
             <li>Milk</li>
           </ul>
