--- a/index.html
+++ b/index.html
@@ -19,55 +19,24 @@
     <main>
 
         <section class="question1">
-        <h1>1st question</h1>
-        <ul style="list-style-type:none;>
-            <li class="correct-answer">Coffee</li>
-            <li>Tea</li>
-            <li>Milk</li>
-          </ul>
+        <h1 id="questions">1st question</h1>
+        <ul id="questionsList">
+        </ul>
         </section>
 
-        <section class="quesiton2">
-        <h2>2nd question</h2>
-        <ul style="list-style-type:none;>
-            <li class="correct-answer">Coffee</li>
-            <li>Tea</li>
-            <li>Milk</li>
-          </ul>
+        <section class="rightorwrong">
         </section>
 
-        <section class="3rd-question">
-        <h3>3rd question</h3>
-        <ul style="list-style-type:none;>
-            <li class= "correct-answer">Coffee</li>
-            <li>Tea</li>
-            <li>Milk</li>
-          </ul>
-        </section>
-
-        <section class="4th-question">
-        <h4>4th question</h4>
-        <ul style="list-style-type:none;>
-            <li class="correct-answer">Coffee</li>
-            <li>Tea</li>
-            <li>Milk</li>
-          </ul>
-        </section>
-
-
-        <section class="All-Done">
+        <section class="allDone">
         <h5>All Done your final score is</h5>
-        </section>
-
         <form class="Input-Name">
         <h6>Your Final Score is:</h6>
         <label for="fname">Your Name:</label>
         <input type="text" id="fname"><br><br>
         <button type="button">Submit</button>
         </form>
-
-
-
+        </section>
+        
     </main>
 
 
