--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
 <body>
 
     <div class="highscores"> View Highscores</div>
-    <div class="timeleft">Time Left:</div>
+    <div class="timeleft"></div>
     <div class="score">Score:</div>
     <h1>Welcome to the code quiz</h1>
     <p>this is the code quiz enjoy!</p>
-    <button type="button">Start Quiz</button>
+    <button type="button" id="startButton2">Start Quiz</button>
 
     <main>
 
@@ -36,7 +36,7 @@
         <button type="button">Submit</button>
         </form>
         </section>
-        
+
     </main>
 
 
