--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <main>
 
         <section class="question1">
-        <h1 id="questions">1st question</h1>
+        <h1 id="questions"></h1>
         <ul id="questionsList">
         </ul>
         </section>
